--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@
  
  .slider .slick-slide {
      margin:0 10px;
+     background-color: #054014;
  }
  
  /*矢印の設定*/
@@ -78,12 +79,13 @@
  }
 
  .sample-box{
-    margin-top: 250px;
-    margin-bottom: 250px;
-    color: rgb(51, 49, 49);
+    padding-top: 250px;
+    padding-bottom: 250px;
+    color: rgb(255, 255, 255);
     text-align: center;
     letter-spacing: 5px;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #054014;
  }
 
 #content{
@@ -93,6 +95,7 @@
     display: flex;
     flex-flow: wrap;
     justify-content: space-between;
+    background-color: #054014;
 }
 
 .set{
@@ -100,6 +103,7 @@
     /* min-height: 400px; */
     width: 300px;
     margin: 10px;
+    height: 400px;
 }
 
 img{
@@ -110,7 +114,7 @@ footer{
     margin-top: 50px;
     width: 100%;
     height: 100px;
-    background-color: #174a5c;
+    background-color: #054014;
     color: white;
     text-align: center;
 }
@@ -118,3 +122,4 @@ footer{
 ul.footer-menu li {
 display: inline;
 }
+
