--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,6 @@
  
  .slider .slick-slide {
      margin:0 10px;
-     background-color: #054014;
  }
  
  /*矢印の設定*/
@@ -84,7 +83,7 @@
     color: rgb(255, 255, 255);
     text-align: center;
     letter-spacing: 5px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: monospace;
     background-color: #054014;
  }
 
@@ -111,15 +110,21 @@ img{
 }
 
 footer{
-    margin-top: 50px;
+   
     width: 100%;
     height: 100px;
     background-color: #054014;
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
 }
 
 ul.footer-menu li {
 display: inline;
+
 }
 
+.span{
+    font-size: 20px;
+    color: aqua
+    
+}
