--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@
     color: rgb(255, 255, 255);
     text-align: center;
     letter-spacing: 5px;
-    font-family: ;
+    font-family: 'Courier New', Courier, monospace;
     background-color: #054014;
  }
 
