--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 *{
     margin: 0;
-    padding: o;
-} */
+    padding: 0;
+    font-family: monospace
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300&display=swap');
 
 /* .wrap{
     overflow: hidden;
